// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders circle toggle correctly 1`] = `
<Button
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  accessible={true}
  itemID="1"
  on={false}
  onPress={[Function]}
  testID="circle-button"
  value="1"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#C7CDD1",
          "borderRadius": 24,
          "borderWidth": 0.5,
          "flex": 1,
          "height": 48,
          "justifyContent": "center",
          "minWidth": 48,
          "paddingHorizontal": 8,
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={false}
      style={
        Array [
          Object {
            "color": "#2D3B45",
            "fontFamily": "Lato-Regular",
            "fontSize": 16,
          },
          Object {
            "color": "#556572",
            "fontSize": 20,
            "fontWeight": "500",
          },
        ]
      }
    >
      4
    </Text>
  </View>
</Button>
`;

exports[`renders circle toggle when on correctly 1`] = `
<Button
  accessibilityTraits={
    Array [
      "button",
      "selected",
    ]
  }
  accessible={true}
  itemID="1"
  on={true}
  onPress={[Function]}
  testID="circle-button"
  value="1"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#C7CDD1",
          "borderRadius": 24,
          "borderWidth": 0.5,
          "flex": 1,
          "height": 48,
          "justifyContent": "center",
          "minWidth": 48,
          "paddingHorizontal": 8,
        },
        undefined,
        Object {
          "backgroundColor": "#008EE2",
          "borderWidth": 0,
        },
      ]
    }
  >
    <Text
      accessible={false}
      style={
        Array [
          Object {
            "color": "#2D3B45",
            "fontFamily": "Lato-Regular",
            "fontSize": 16,
          },
          Object {
            "color": "#FFFFFF",
            "fontSize": 20,
            "fontWeight": "500",
          },
        ]
      }
    >
      4
    </Text>
  </View>
</Button>
`;

exports[`renders circle toggle with an image 1`] = `
<Button
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  accessible={true}
  itemID="1"
  on={false}
  onPress={[Function]}
  testID="circle-button"
  value="1"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#C7CDD1",
          "borderRadius": 24,
          "borderWidth": 0.5,
          "flex": 1,
          "height": 48,
          "justifyContent": "center",
          "minWidth": 48,
          "paddingHorizontal": 8,
        },
        undefined,
      ]
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/images/Add.png",
        }
      }
    />
  </View>
</Button>
`;
